[feat] Active Scripts list no longer jumps on first update

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -540,3 +540,11 @@ a:visited {
 .accordion-panel ul > li {
     background-color: #555;
 }
+
+/* override the global <span> styling */
+#active-scripts-total-production-active,
+#active-scripts-total-prod-aug-total,
+#active-scripts-total-prod-aug-avg {
+    margin: 0;
+    padding: 0;
+}
